--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,19 +12,36 @@
 
     <div class="content">
         <!-- Discount Banner -->
-        <div class="discount-banner text-center py-2 bg-danger text-white">
-            <p class="mb-0">Special Discount! Get 20% off on all products!</p>
+
+        <div id="discountCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="discount-banner text-center py-2 text-white bg-red">
+                        <p class="mb-0">Special Discount! Get 20% off on all products!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="discount-banner text-center py-2 text-white bg-green">
+                        <p class="mb-0">Hurry Up! Extra 10% off on your first purchase!</p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <script>    
+            const myCarousel = new bootstrap.Carousel('#discountCarousel', {
+                interval: 3000 // 5 ثواني (التوقيت الافتراضي)
+            });
+            </script>
+            
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Navbar -->
         <div class="container d-flex justify-content-between">
             <a class="navbar-brand" href="#">
                 <img src="https://via.placeholder.com/100x50?text=Logo" alt="Logo" class="d-inline-block align-top">
             </a>
             <div class="icons">
-                <a href="هنا كتب ليان د فيسبوك"> <img src="./img/facebook.png" alt="" width="30" height="30"></a>
-                <a href="هنا كتب ليان د تويتر "><img src="./img/instagram.png" alt="" width="30" height="30"></a>
                 <a href="هنا كتر ليان د انستا"><img src="./img/whatsapp.png" alt="" width="30" height="30"></a>
-                <a href="https://wa.me/+212دير النمرة د واتساب"><img src="./img/twitter.jpg" alt="" width="30" height="30"></i></a>
             </div>
         </div>
         </nav>
@@ -56,13 +72,13 @@
                     </div>
 
                     <!-- Additional Images Section -->
-                    <div class="additional-images mt-3">
+                    <div class="additional-images mt-4">
                         <div class="thumbnails">
                             <img src="./img/ss.jpg" alt="Additional Image 1" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
                             <img src="./img/ss.jpg" alt="Additional Image 2" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
-                            <img src="https://via.placeholder.com/100" alt="Additional Image 3" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
-                            <img src="https://via.placeholder.com/100" alt="Additional Image 4" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
-                            <img src="https://via.placeholder.com/100" alt="Additional Image 5" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
+                            <img src="./img/ss.jpg" alt="Additional Image 3" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
+                            <img src="./img/ss.jpg" alt="Additional Image 4" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
+                            <img src="./img/ss.jpg" alt="Additional Image 5" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
                             <img src="https://via.placeholder.com/100" alt="Additional Image 6" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
                             <img src="https://via.placeholder.com/100" alt="Additional Image 7" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
                             <img src="https://via.placeholder.com/100" alt="Additional Image 8" class="img-thumbnail" data-fullsize="https://via.placeholder.com/500">
